--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -41,3 +41,10 @@ h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+@font-face {
+  font-family: 'poppins';
+  src: url('../fonts/poppins/poppins-regular-webfont.woff2') format('woff2'),
+       url('../fonts/poppins/poppins-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
