--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
   --bg-color1: #111204;
+  --bg-color2: #222222;
   --primary-color1: #fff;
   --primary-color2: #b9fd50;
   --primary-color3: #000;
@@ -141,7 +142,7 @@ nav {
   text-align: center;
   justify-content: center;
   min-height: calc(100vh - 112px);
-  padding: 2rem 2rem 6rem 2rem;
+  padding: 2rem 2rem 2rem 2rem;
   position: relative;
 }
 .glow {
@@ -153,13 +154,14 @@ nav {
   background: radial-gradient(circle, #b9fd5040 0%, rgba(0, 0, 0, 0) 70%);
   transform: translate(-50%, -50%);
   filter: blur(134.37px);
+  pointer-events: none;
 }
 .star {
   position: absolute;
 }
 .star1 {
   right: 20%;
-  bottom: 60%;
+  bottom: 70%;
   background: url(../images/hero/Star.svg) no-repeat;
   height: 48px;
   width: 48px;
@@ -168,14 +170,14 @@ nav {
   background: url(../images/hero/Star2.svg) no-repeat;
   height: 20px;
   width: 20px;
-  bottom: 10%;
+  bottom: 35%;
   right: 35%;
 }
 .star3 {
   background: url(../images/hero/Star3.svg) no-repeat;
   height: 14px;
   width: 15px;
-  bottom: 20%;
+  bottom: 40%;
   left: 22%;
 }
 .hero-title {
@@ -193,4 +195,38 @@ nav {
 }
 .hero button {
   margin-top: 2rem;
+  margin-bottom: 4rem;
+}
+.brands p {
+  font-size: 1rem;
+  font-weight: 700;
+  position: relative;
+  margin-bottom: 2rem;
+}
+.brands p:after, .brands p:before{
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 20%;
+  background-color: var(--primary-color2);
+  height: 2px;
+}
+.brands p::after{
+  right: 0%;
+}
+.brands p:before{
+  left: 0%;
+}
+.brands-content{
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 1rem 2rem;
+  column-gap: 2rem;
+  background-color: var(--bg-color2);
+  border-radius: 8.49px;
+  width: 100%;
+}
+.brands-content img{
+  width: 90px;
+  height: 50px;
 }
