--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
   --primary-color1: #fff;
   --primary-color2: #b9fd50;
   --primary-color3: #000;
+  --primary-color4: #ffffff80
 }
 body {
   color: var(--primary-color1);
@@ -229,4 +230,67 @@ nav {
 .brands-content img{
   width: 90px;
   height: 50px;
+}
+/* Process section */
+.prcoess-content{
+  padding: 2rem;
+}
+.prcoess-intro-container{
+  flex-wrap: wrap;
+  justify-content: space-evenly ;
+}
+.process-intro1, .process-intro2{
+  max-width: 600px;
+}
+.process-intro1 p:first-child{
+  color: var(--primary-color2);
+}
+.process-intro1 p:last-child{
+  font-size: 3rem;
+  font-weight: 600;
+}
+.process-intro2{
+  color: var(--primary-color4);
+  align-self: flex-start;
+  padding-top: 2.5rem;
+}
+.process-intro2 p:first-child{
+  padding-bottom: 1rem;
+}
+.process-icons{
+  justify-content: space-evenly;
+}
+.process-card img{
+  box-sizing: content-box;
+  width: 70px;
+  padding-bottom: 1rem;
+  position: relative;
+}
+.process-cards-container{
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.process-card{
+  max-width: 400px;
+  padding-top: 2rem;
+}
+.process-card h3, .process-card p{
+  padding-top: 1rem;
+}
+.process-card p{
+  color: var(--primary-color4);
+}
+.process-icon{
+  position: relative;
+}
+.process-icon::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(../images/icons/process/line.svg) no-repeat;
+  top: 30%;
+  right: -15%;
+  z-index: -1;
+
 }
