feat(portfolio section): Implment reponsive portfolio sectionAdd portfolio grid and GSAP parallax with ScrollSmoother/ScrollTrigger - Polish hero/brands/process sections; improve responsive spacing and grid

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -48,3 +48,17 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'outfit';
+  src: url('../fonts/outfit/Outfit-Regular.woff2') format('woff2'),
+       url('../fonts/outfit/Outfit-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'outfit-bold';
+  src: url('../fonts/outfit/Outfit-Bold.woff2') format('woff2'),
+       url('../fonts/outfit/Outfit-Bold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
