--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,6 +5,19 @@
   .process-icon::after{
     background: none;
   }
+  .service-names{
+    justify-content: flex-start;
+    max-width: 600px;
+  }
+  .services-grid{
+    grid-template-columns: repeat(2, 300px);
+    column-gap: 1rem;
+  }
+  .services-grid-item:nth-child(n){
+    border: none;
+    padding-left: 0 ;
+    padding-right: 0;
+  }
 }
 @media (max-width: 860px) {
   nav {
@@ -17,6 +30,14 @@
 @media (max-width: 768px){
   #portfolio .images {
     gap: 2rem;
+  }
+  .services-grid{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 600px) {
+  .services-grid{
+    grid-template-columns: 1fr;
   }
 }
 @media (max-width: 515px){
