feat(site):  Reordered sections -  Swapped portfolio & services section places in DOM - Replaced "Benefits" link with "Pricing" in the navigation - Reordered nav links to match new site structure - Added smooth scrolling behavior to the body for improved user experience

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
   color: var(--primary-color1);
   font-family: poppins;
   background-color: var(--bg-color1);
+  scroll-behavior: smooth;
 }
 /* Global */
 .section {
@@ -413,7 +414,6 @@ nav {
   padding: 2rem;
   gap: 1rem;
 }
-
 .service-names {
   flex-wrap: wrap;
   gap: 0.5rem;
