--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,15 +20,16 @@ body {
 /* Global */
 .section {
   min-height: 100vh;
-  justify-content: center;
 }
 .flex {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .flex-column {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .btn {
   background-color: #b9fd50;
@@ -41,6 +42,7 @@ body {
 .title {
   padding: 2rem 1rem;
   text-align: center;
+  margin-bottom: auto ;
 }
 .title > h1 {
   font-size: 2rem;
@@ -53,7 +55,7 @@ body {
   color: var(--primary-color2);
 }
 .title p:last-child {
-  color: var(--primary-color5);
+  color: var(--primary-color4);
 }
 .intro-container {
   flex-wrap: wrap;
@@ -340,6 +342,9 @@ nav {
 #portfolio .title {
   padding-bottom: 5rem;
 }
+#portfolio .title p:last-child {
+  color: var(--primary-color3);
+}
 #portfolio .images {
   position: relative;
   width: 100%;
@@ -347,7 +352,7 @@ nav {
   margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr) 2rem;
+  grid-template-rows: repeat(4, 1fr);
   justify-content: center;
   justify-items: center;
   align-items: center;
@@ -472,7 +477,6 @@ nav {
   max-width: 600px;
   margin: auto;
   border-radius: 16px;
-  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.14);
   padding: 2rem 2rem 1.5rem 2rem;
   gap: 1rem;
 }
@@ -515,12 +519,12 @@ nav {
 }
 .swiper {
   max-width: 100%;
-  padding: 2rem 0;
+  margin-bottom: auto;
+  pointer-events: none;
 }
 .swiper-slide{
   position: relative ;
   aspect-ratio: 12/6;
-  cursor: grab;
   user-select: none;
   overflow: hidden;
   overflow-y: auto;
