feat(pricing section): Add new pricing section and responsive styles - Introduced three pricing tiers: Basic, Standard, and Growth with detailed descriptions and benefits. - Enhanced responsive design for pricing cards with hover effects. - Added new SVG icon for visual enhancement in pricing benefits.

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -19,6 +19,14 @@
     padding-right: 0;
   }
 }
+@media (max-width: 1129px) {
+  .pricing-card.card-side {
+    transform: scale(.9);
+  }
+  .pricing-card.card-side:hover{
+    transform: scale(.92);
+  }
+}
 @media (max-width: 860px) {
   nav {
     padding: 2rem 0.5rem;
