--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -627,3 +627,66 @@ nav {
   border: 1px solid var(--primary-color2);
   border-radius: 8px;
 }
+/* Blogs Section */
+#blogs{
+  align-items: center;
+}
+#blogs .title{
+  padding-bottom: 2rem ;
+}
+.blogs-content {
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+.blog-card {
+  align-items: stretch;
+  background: linear-gradient(#b9fd5003 0%, #00000004 100%);
+  border: 1.5px solid #b9fd5037;
+  border-radius: 18px;
+  overflow: hidden;
+  max-width: 560px;
+  min-height: 172px;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.11);
+  transition: box-shadow 0.18s;
+  transform: scale(.9);
+}
+.blog-card__img {
+  justify-content: center;
+  flex: 0 0 144px;
+  padding: 0.7rem 0.5rem 0.7rem 0.7rem;
+  border-top-left-radius: 14px;
+  border-bottom-left-radius: 14px;
+}
+.blog-card__img img {
+  display: block;
+  width: 100%;
+  height: 144px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+.blog-card__content {
+  flex: 1 1 0;
+  padding: 1.1rem 1.5rem 1.1rem 1rem;
+}
+.blog-card__tag {
+  display: inline-block;
+  color: #bef943;
+  font-weight: 600;
+  font-size: 0.93rem;
+  letter-spacing: 0.04em;
+  margin-bottom: 0.49rem;
+  text-transform: uppercase;
+}
+.blog-card__title {
+  font-size: 1.2rem;
+  color: var(--primary-color1);
+  margin-bottom: 0.7rem;
+  font-weight: 700;
+  line-height: 1.35;
+}
+.blog-card__desc {
+  color: #bdbfbc;
+  font-size: 1rem;
+  margin: 0;
+}
