feat(testimonials): Update testimonial images to AVIF format and modify content - Replaced JPG images with AVIF format for better performance - Updated testimonial content with new names and titles - Adjusted swiper settings for improved animation speed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,13 +518,14 @@ nav {
 .swiper {
   max-width: 100%;
   margin-bottom: auto;
-  pointer-events: none;
+  cursor: grab;
 }
 .swiper-slide{
   position: relative ;
   aspect-ratio: 12/6;
   user-select: none;
   overflow: hidden;
+  will-change: transform;
 }
 .swiper-wrapper{
   transition-timing-function: linear !important;
