feat(navigation): Update anchor links for smooth scrolling - Changed "Get Started" and "Book A Meeting" buttons to link to specific sections - Added ID to footer for improved navigation - Implemented smooth scrolling for anchor links using GSAP ScrollSmoother

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ body {
   color: var(--primary-color1);
   font-family: poppins;
   background-color: var(--bg-color1);
-  scroll-behavior: smooth;
 }
 /* Global */
 .section {
@@ -431,6 +430,7 @@ nav {
   justify-content: center;
   max-width: 1200px;
   padding-bottom: 2rem;
+  pointer-events: none;
 }
 .services-grid {
   display: grid;
