--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,8 +670,11 @@ nav {
   max-width: 560px;
   min-height: 172px;
   box-shadow: 0 4px 16px rgba(0,0,0,0.11);
-  transition: box-shadow 0.18s;
+  transition: box-shadow 0.18s, transform .3s ease;
   transform: scale(.9);
+}
+.blog-card:hover{
+  transform: scale(1.01);
 }
 .blog-card__img {
   justify-content: center;
@@ -690,6 +693,11 @@ nav {
 .blog-card__content {
   flex: 1 1 0;
   padding: 1.1rem 1.5rem 1.1rem 1rem;
+}
+.blog-card__content h3:hover{
+  color: var(--primary-color9);
+  cursor: pointer;
+  text-decoration: underline;
 }
 .blog-card__tag {
   display: inline-block;
